--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: rgb(202, 159, 159);
-    --foreground: #ededed;
+    --background: #F4F6F8;
+    --foreground: #1C252E;
   }
 }
 
@@ -23,4 +23,10 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
